--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "mohammad-jf",
   "license": "MIT",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0"
   },
   "devDependencies": {
